--- a/public/courses/stat220/week1/index.html
+++ b/public/courses/stat220/week1/index.html
@@ -715,7 +715,11 @@ Day 1 Slides -- " /><meta property="og:image" content="https://deepbas.netlify.a
 
 
 
-  <li class=""><a href="/courses/stat220/github-in-stat-220/">GitHub Classroom Guide for Students in Stat 220</a></li>
+  <li class=""><a href="/courses/stat220/github-in-stat-220/">GitHub Guide for Students in Stat 220</a></li>
+
+
+
+  <li class=""><a href="/courses/stat220/software/">Software in Stat 220</a></li>
 
 
 
@@ -728,10 +732,6 @@ Day 1 Slides -- " /><meta property="og:image" content="https://deepbas.netlify.a
 
 
   <li class=""><a href="/courses/stat220/data/">Datasets</a></li>
-
-
-
-  <li class=""><a href="/courses/stat220/software/">Software in Stat 220</a></li>
 
 
 
