--- a/public/pdf/Day11/Day11.html
+++ b/public/pdf/Day11/Day11.html
@@ -47,7 +47,7 @@ background-size: 160px, 100% 100%
 
 .large[Bastola]
 
- February 01 2022
+ September 10 2022
 
 ---
 
@@ -89,8 +89,8 @@ aboutMe &lt;- c("my SSN 536-76-9423 and my age is 55")
 str_view_all(aboutMe, "\\s\\d?") # space followed by 0 or 1 digit
 ```
 
-<div id="htmlwidget-68ecfe013c90763a812f" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-68ecfe013c90763a812f">{"x":{"html":"<ul>\n  <li>my<span class='match'> <\/span>SSN<span class='match'> 5<\/span>36-76-9423<span class='match'> <\/span>and<span class='match'> <\/span>my<span class='match'> <\/span>age<span class='match'> <\/span>is<span class='match'> 5<\/span>5<\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-24f78e268d72275ebac5" style="width:960px;height:100%;" class="str_view html-widget"></div>
+<script type="application/json" data-for="htmlwidget-24f78e268d72275ebac5">{"x":{"html":"<ul>\n  <li>my<span class='match'> <\/span>SSN<span class='match'> 5<\/span>36-76-9423<span class='match'> <\/span>and<span class='match'> <\/span>my<span class='match'> <\/span>age<span class='match'> <\/span>is<span class='match'> 5<\/span>5<\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
 
 ---
 
@@ -107,8 +107,8 @@ aboutMe &lt;- c("my SSN 536-76-9423 and my age is 55")
 str_view_all(aboutMe, "\\s\\d+")  # space followed by 1 or more digits
 ```
 
-<div id="htmlwidget-09bba5b4d9a7a212f74c" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-09bba5b4d9a7a212f74c">{"x":{"html":"<ul>\n  <li>my SSN<span class='match'> 536<\/span>-76-9423 and my age is<span class='match'> 55<\/span><\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-b6006f42297b8a3989cb" style="width:960px;height:100%;" class="str_view html-widget"></div>
+<script type="application/json" data-for="htmlwidget-b6006f42297b8a3989cb">{"x":{"html":"<ul>\n  <li>my SSN<span class='match'> 536<\/span>-76-9423 and my age is<span class='match'> 55<\/span><\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
 
 
 ---
@@ -126,8 +126,8 @@ aboutMe &lt;- c("my SSN 536-76-9423 and my age is 55")
 str_view_all(aboutMe, "\\s\\d*")  # space followed by 0 or more digits
 ```
 
-<div id="htmlwidget-29e64af8237e551b1330" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-29e64af8237e551b1330">{"x":{"html":"<ul>\n  <li>my<span class='match'> <\/span>SSN<span class='match'> 536<\/span>-76-9423<span class='match'> <\/span>and<span class='match'> <\/span>my<span class='match'> <\/span>age<span class='match'> <\/span>is<span class='match'> 55<\/span><\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-b7cab76d22a7031ab653" style="width:960px;height:100%;" class="str_view html-widget"></div>
+<script type="application/json" data-for="htmlwidget-b7cab76d22a7031ab653">{"x":{"html":"<ul>\n  <li>my<span class='match'> <\/span>SSN<span class='match'> 536<\/span>-76-9423<span class='match'> <\/span>and<span class='match'> <\/span>my<span class='match'> <\/span>age<span class='match'> <\/span>is<span class='match'> 55<\/span><\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
 
 ---
 
@@ -237,7 +237,8 @@ Make changes to the code to ...
 4. and then display the results as a line plot.
 
 
-<div class="countdown" id="timer_61f961c3" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_2d5f7add" data-update-every="1" tabindex="0" style="right:0;bottom:0;">
+<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -313,7 +314,8 @@ babynames %&gt;%
 ```
 
 
-<div class="countdown" id="timer_61f96186" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_30a241a3" data-update-every="1" tabindex="0" style="right:0;bottom:0;">
+<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -403,7 +405,8 @@ class: action
 ]
 
 
-<div class="countdown" id="timer_61f964b6" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_fd231a25" data-update-every="1" tabindex="0" style="right:0;bottom:0;">
+<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -462,7 +465,8 @@ template: section
 &gt;  - how many baby names start with "M"?
 ]
 
-<div class="countdown" id="timer_61f961db" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_9dcd2dff" data-update-every="1" tabindex="0" style="right:0;bottom:0;">
+<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -479,8 +483,8 @@ template: section
 str_view(name_phone, "[5-8]")
 ```
 
-<div id="htmlwidget-bd003563a0daa6ff0d88" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-bd003563a0daa6ff0d88">{"x":{"html":"<ul>\n  <li>Moly Robins: 2<span class='match'>5<\/span>0-999-8878<\/li>\n  <li>Ali Duluth: 41<span class='match'>6<\/span>-908-2044<\/li>\n  <li>Eli Mitchell: 204-192-9<span class='match'>8<\/span>29<\/li>\n  <li>May Flowers: 2<span class='match'>5<\/span>0-209-7047<\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-0abd58c26e802f130d61" style="width:960px;height:100%;" class="str_view html-widget"></div>
+<script type="application/json" data-for="htmlwidget-0abd58c26e802f130d61">{"x":{"html":"<ul>\n  <li>Moly Robins: 2<span class='match'>5<\/span>0-999-8878<\/li>\n  <li>Ali Duluth: 41<span class='match'>6<\/span>-908-2044<\/li>\n  <li>Eli Mitchell: 204-192-9<span class='match'>8<\/span>29<\/li>\n  <li>May Flowers: 2<span class='match'>5<\/span>0-209-7047<\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
 ]
 .pull-right[
 
@@ -488,8 +492,8 @@ str_view(name_phone, "[5-8]")
 str_view_all(name_phone, "[5-8]")
 ```
 
-<div id="htmlwidget-3d4f92d72c10ab93a9b7" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-3d4f92d72c10ab93a9b7">{"x":{"html":"<ul>\n  <li>Moly Robins: 2<span class='match'>5<\/span>0-999-<span class='match'>8<\/span><span class='match'>8<\/span><span class='match'>7<\/span><span class='match'>8<\/span><\/li>\n  <li>Ali Duluth: 41<span class='match'>6<\/span>-90<span class='match'>8<\/span>-2044<\/li>\n  <li>Eli Mitchell: 204-192-9<span class='match'>8<\/span>29<\/li>\n  <li>May Flowers: 2<span class='match'>5<\/span>0-209-<span class='match'>7<\/span>04<span class='match'>7<\/span><\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-78ef7ecd589b0281c8ed" style="width:960px;height:100%;" class="str_view html-widget"></div>
+<script type="application/json" data-for="htmlwidget-78ef7ecd589b0281c8ed">{"x":{"html":"<ul>\n  <li>Moly Robins: 2<span class='match'>5<\/span>0-999-<span class='match'>8<\/span><span class='match'>8<\/span><span class='match'>7<\/span><span class='match'>8<\/span><\/li>\n  <li>Ali Duluth: 41<span class='match'>6<\/span>-90<span class='match'>8<\/span>-2044<\/li>\n  <li>Eli Mitchell: 204-192-9<span class='match'>8<\/span>29<\/li>\n  <li>May Flowers: 2<span class='match'>5<\/span>0-209-<span class='match'>7<\/span>04<span class='match'>7<\/span><\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
 ]
 
 ---
@@ -503,8 +507,8 @@ str_view_all(name_phone, "[5-8]")
 str_view(name_phone, "[5|8]")
 ```
 
-<div id="htmlwidget-7e0bebfe59eae48d3c1f" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-7e0bebfe59eae48d3c1f">{"x":{"html":"<ul>\n  <li>Moly Robins: 2<span class='match'>5<\/span>0-999-8878<\/li>\n  <li>Ali Duluth: 416-90<span class='match'>8<\/span>-2044<\/li>\n  <li>Eli Mitchell: 204-192-9<span class='match'>8<\/span>29<\/li>\n  <li>May Flowers: 2<span class='match'>5<\/span>0-209-7047<\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-aae899ebdd4844b44b53" style="width:960px;height:100%;" class="str_view html-widget"></div>
+<script type="application/json" data-for="htmlwidget-aae899ebdd4844b44b53">{"x":{"html":"<ul>\n  <li>Moly Robins: 2<span class='match'>5<\/span>0-999-8878<\/li>\n  <li>Ali Duluth: 416-90<span class='match'>8<\/span>-2044<\/li>\n  <li>Eli Mitchell: 204-192-9<span class='match'>8<\/span>29<\/li>\n  <li>May Flowers: 2<span class='match'>5<\/span>0-209-7047<\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
 ]
 .pull-right[
 
@@ -512,8 +516,8 @@ str_view(name_phone, "[5|8]")
 str_view_all(name_phone, "[5-8|a-e]")
 ```
 
-<div id="htmlwidget-c5d3fddecbc65ef2ba94" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-c5d3fddecbc65ef2ba94">{"x":{"html":"<ul>\n  <li>Moly Ro<span class='match'>b<\/span>ins: 2<span class='match'>5<\/span>0-999-<span class='match'>8<\/span><span class='match'>8<\/span><span class='match'>7<\/span><span class='match'>8<\/span><\/li>\n  <li>Ali Duluth: 41<span class='match'>6<\/span>-90<span class='match'>8<\/span>-2044<\/li>\n  <li>Eli Mit<span class='match'>c<\/span>h<span class='match'>e<\/span>ll: 204-192-9<span class='match'>8<\/span>29<\/li>\n  <li>M<span class='match'>a<\/span>y Flow<span class='match'>e<\/span>rs: 2<span class='match'>5<\/span>0-209-<span class='match'>7<\/span>04<span class='match'>7<\/span><\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-5477faa6b39585c314cd" style="width:960px;height:100%;" class="str_view html-widget"></div>
+<script type="application/json" data-for="htmlwidget-5477faa6b39585c314cd">{"x":{"html":"<ul>\n  <li>Moly Ro<span class='match'>b<\/span>ins: 2<span class='match'>5<\/span>0-999-<span class='match'>8<\/span><span class='match'>8<\/span><span class='match'>7<\/span><span class='match'>8<\/span><\/li>\n  <li>Ali Duluth: 41<span class='match'>6<\/span>-90<span class='match'>8<\/span>-2044<\/li>\n  <li>Eli Mit<span class='match'>c<\/span>h<span class='match'>e<\/span>ll: 204-192-9<span class='match'>8<\/span>29<\/li>\n  <li>M<span class='match'>a<\/span>y Flow<span class='match'>e<\/span>rs: 2<span class='match'>5<\/span>0-209-<span class='match'>7<\/span>04<span class='match'>7<\/span><\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
 ]
 
 
@@ -526,8 +530,8 @@ str_view_all(name_phone, "[5-8|a-e]")
 str_view_all(name_phone, pattern = "[2-9][0-9]{2}-[0-9]{3}-[0-9]{4}")
 ```
 
-<div id="htmlwidget-a1df65770f8e35e4d705" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-a1df65770f8e35e4d705">{"x":{"html":"<ul>\n  <li>Moly Robins: <span class='match'>250-999-8878<\/span><\/li>\n  <li>Ali Duluth: <span class='match'>416-908-2044<\/span><\/li>\n  <li>Eli Mitchell: <span class='match'>204-192-9829<\/span><\/li>\n  <li>May Flowers: <span class='match'>250-209-7047<\/span><\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-d6fe0845d8e93428de87" style="width:960px;height:100%;" class="str_view html-widget"></div>
+<script type="application/json" data-for="htmlwidget-d6fe0845d8e93428de87">{"x":{"html":"<ul>\n  <li>Moly Robins: <span class='match'>250-999-8878<\/span><\/li>\n  <li>Ali Duluth: <span class='match'>416-908-2044<\/span><\/li>\n  <li>Eli Mitchell: <span class='match'>204-192-9829<\/span><\/li>\n  <li>May Flowers: <span class='match'>250-209-7047<\/span><\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
 
 ---
 
@@ -588,7 +592,7 @@ str_flatten(c("a_3", "d_54"), # vector to collapse
 ```r
 y &lt;- Sys.Date() # current date
 str_glue("today is {y}")
-today is 2022-02-01
+today is 2022-09-10
 ```
 ]
 ]
@@ -598,7 +602,7 @@ today is 2022-02-01
 ```r
 # base R equivalent
 paste0("today is ", y)
-[1] "today is 2022-02-01"
+[1] "today is 2022-09-10"
 ```
 ]
 ]
@@ -752,8 +756,8 @@ str_view_all(name_phone,
              pattern = "([2-9][0-9]{2})[.-]([0-9]{3})[.-]([0-9]{4})")
 ```
 
-<div id="htmlwidget-79dc62e50efcba5d2d39" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-79dc62e50efcba5d2d39">{"x":{"html":"<ul>\n  <li>Moly Robins: <span class='match'>250-999-8878<\/span><\/li>\n  <li>Ali Duluth: <span class='match'>416-908-2044<\/span><\/li>\n  <li>Eli Mitchell: <span class='match'>204.192.9829<\/span><\/li>\n  <li>May Flowers: <span class='match'>250.209.7047<\/span><\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-f0ecdc4288635aea964c" style="width:960px;height:100%;" class="str_view html-widget"></div>
+<script type="application/json" data-for="htmlwidget-f0ecdc4288635aea964c">{"x":{"html":"<ul>\n  <li>Moly Robins: <span class='match'>250-999-8878<\/span><\/li>\n  <li>Ali Duluth: <span class='match'>416-908-2044<\/span><\/li>\n  <li>Eli Mitchell: <span class='match'>204.192.9829<\/span><\/li>\n  <li>May Flowers: <span class='match'>250.209.7047<\/span><\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
 
 ---
 
@@ -784,8 +788,8 @@ phone_numbers &lt;- c("515 111 2244", "310 549 6892", "474 234 7548")
 str_view(phone_numbers, "(\\d)\\d\\1")
 ```
 
-<div id="htmlwidget-b10608d0fd09ef26207d" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-b10608d0fd09ef26207d">{"x":{"html":"<ul>\n  <li><span class='match'>515<\/span> 111 2244<\/li>\n  <li>310 549 6892<\/li>\n  <li><span class='match'>474<\/span> 234 7548<\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-79d23327ec0565b76318" style="width:960px;height:100%;" class="str_view html-widget"></div>
+<script type="application/json" data-for="htmlwidget-79d23327ec0565b76318">{"x":{"html":"<ul>\n  <li><span class='match'>515<\/span> 111 2244<\/li>\n  <li>310 549 6892<\/li>\n  <li><span class='match'>474<\/span> 234 7548<\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
 
 
 ---
@@ -807,7 +811,8 @@ str_detect(x, "^[Ss](.*)(t+)(.+)(t+)")
 The regular expression `"^[Ss](.*)(t+)(.+)(t+)"` detects "scuttlebutt", "Stetson", and "Scattter", but not "Scatter." Why?
 ]
 
-<div class="countdown" id="timer_61f964e6" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_9b2bdd1b" data-update-every="1" tabindex="0" style="right:0;bottom:0;">
+<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -863,6 +868,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
