--- a/public/courses/stat220/cheatsheets/index.html
+++ b/public/courses/stat220/cheatsheets/index.html
@@ -729,7 +729,11 @@ leaflet Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify
 
 
 
-  <li class=""><a href="/courses/stat220/github-in-stat-220/">GitHub Classroom Guide for Students in Stat 220</a></li>
+  <li class=""><a href="/courses/stat220/github-in-stat-220/">GitHub Guide for Students in Stat 220</a></li>
+
+
+
+  <li class=""><a href="/courses/stat220/software/">Software in Stat 220</a></li>
 
 
 
@@ -742,10 +746,6 @@ leaflet Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify
 
 
   <li class=""><a href="/courses/stat220/data/">Datasets</a></li>
-
-
-
-  <li class=""><a href="/courses/stat220/software/">Software in Stat 220</a></li>
 
 
 
