--- a/public/courses/stat220/index.html
+++ b/public/courses/stat220/index.html
@@ -708,7 +708,11 @@
 
 
 
-  <li class=""><a href="/courses/stat220/github-in-stat-220/">GitHub Classroom Guide for Students in Stat 220</a></li>
+  <li class=""><a href="/courses/stat220/github-in-stat-220/">GitHub Guide for Students in Stat 220</a></li>
+
+
+
+  <li class=""><a href="/courses/stat220/software/">Software in Stat 220</a></li>
 
 
 
@@ -721,10 +725,6 @@
 
 
   <li class=""><a href="/courses/stat220/data/">Datasets</a></li>
-
-
-
-  <li class=""><a href="/courses/stat220/software/">Software in Stat 220</a></li>
 
 
 
@@ -853,9 +853,9 @@
 <ul>
 <li>Data wrangling and formatting <mark>Using the tidyverse set of libraries</mark></li>
 <li>Exploratory data analysis <mark>including data visualization using ggplot2</mark></li>
-<li>Data acquisition <mark>using web-scraping and APIs</mark></li>
+<li>Data acquisition <mark>using web-scraping</mark></li>
 <li>Statistical learning <mark>basics of supervised and unsupervised learning</mark></li>
-<li>Text mining and language processing</li>
+<li>Regular Expression and Text mining</li>
 <li>Reproducible research and dynamic programming <mark>using R/RStudio/RShiny</mark></li>
 </ul>
 <h2 id="course-overview">Course overview</h2>
