--- a/public/pdf/Day13/Day13.html
+++ b/public/pdf/Day13/Day13.html
@@ -44,7 +44,7 @@ background-size: 160px, 100% 100%
 
 .large[Bastola]
 
- February 04 2022
+ September 10 2022
 
 ---
 
@@ -361,11 +361,12 @@ Please git clone the repository on [simple functions](https://github.com/stat220
 ]
 
 .fancy[
-where `\(x_i = (\sum_i^n x_i)/n\)` is the sample mean.] HInt: Use `sum()`
+where `\(x_i = (\sum_i^n x_i)/n\)` is the sample mean.] Hint: Use .bold[sum()]
 
 
 
-<div class="countdown" id="timer_61fd6c7b" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_1323fd7d" data-update-every="1" tabindex="0" style="right:0;bottom:0;">
+<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -508,7 +509,8 @@ x3 &lt;- c("a","b","c")
 
 
 
-<div class="countdown" id="timer_61fd6a85" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_94f687bf" data-update-every="1" tabindex="0" style="right:0;bottom:0;">
+<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -525,10 +527,11 @@ x3 &lt;- c("a","b","c")
 gutenberg_metadata %&gt;%
   filter(title == "Wuthering Heights")
 # A tibble: 1 × 8
-  gutenberg_id title    author gutenberg_autho… language gutenberg_books… rights
-         &lt;int&gt; &lt;chr&gt;    &lt;chr&gt;             &lt;int&gt; &lt;chr&gt;    &lt;chr&gt;            &lt;chr&gt; 
-1          768 Wutheri… Bront…              405 en       Gothic Fiction/… Publi…
-# … with 1 more variable: has_text &lt;lgl&gt;
+  gutenberg_id title             author   guten…¹ langu…² guten…³ rights has_t…⁴
+         &lt;int&gt; &lt;chr&gt;             &lt;chr&gt;      &lt;int&gt; &lt;chr&gt;   &lt;chr&gt;   &lt;chr&gt;  &lt;lgl&gt;  
+1          768 Wuthering Heights Brontë,…     405 en      Gothic… Publi… TRUE   
+# … with abbreviated variable names ¹​gutenberg_author_id, ²​language,
+#   ³​gutenberg_bookshelf, ⁴​has_text
 ```
 
 --
@@ -1112,10 +1115,11 @@ word_count &lt;- function(book_id) {
 gutenberg_metadata %&gt;%
   filter(title == "War and Peace")
 # A tibble: 1 × 8
-  gutenberg_id title    author gutenberg_autho… language gutenberg_books… rights
-         &lt;int&gt; &lt;chr&gt;    &lt;chr&gt;             &lt;int&gt; &lt;chr&gt;    &lt;chr&gt;            &lt;chr&gt; 
-1         2600 War and… Tolst…              136 en       Napoleonic(Book… Publi…
-# … with 1 more variable: has_text &lt;lgl&gt;
+  gutenberg_id title         author       guten…¹ langu…² guten…³ rights has_t…⁴
+         &lt;int&gt; &lt;chr&gt;         &lt;chr&gt;          &lt;int&gt; &lt;chr&gt;   &lt;chr&gt;   &lt;chr&gt;  &lt;lgl&gt;  
+1         2600 War and Peace Tolstoy, Le…     136 en      Napole… Publi… TRUE   
+# … with abbreviated variable names ¹​gutenberg_author_id, ²​language,
+#   ³​gutenberg_bookshelf, ⁴​has_text
 ```
 
 --
@@ -1172,7 +1176,8 @@ c. Modify the `word_count()` function so that it outputs words starting with a p
 ]
 
 
-<div class="countdown" id="timer_61fd6b64" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_986807d1" data-update-every="1" tabindex="0" style="right:0;bottom:0;">
+<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1227,6 +1232,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
