--- a/static/pdf/Day10/Day10.html
+++ b/static/pdf/Day10/Day10.html
@@ -19,10 +19,18 @@
     <textarea id="source">
 class: left, middle, inverse, title-slide
 
+.title[
 # More date and time and strings
+]
+.subtitle[
 ## <br/> STAT 220
+]
+.author[
 ### Bastola
-### January 30 2022
+]
+.date[
+### September 10 2022
+]
 
 ---
 
@@ -52,12 +60,12 @@ energy &lt;- read_csv("https://raw.githubusercontent.com/deepbas/statdatasets/ma
 ```r
 energy %&gt;% slice_max(n=2, order_by = Timestamp) 
 # A tibble: 2 × 90
-  Timestamp            year month weekOfYear dayOfMonth dayWeek timeHour
-  &lt;dttm&gt;              &lt;dbl&gt; &lt;dbl&gt;      &lt;dbl&gt;      &lt;dbl&gt; &lt;fct&gt;      &lt;dbl&gt;
-1 2016-08-31 23:45:00  2016     8         35         31 Wed           23
-2 2016-08-31 23:30:00  2016     8         35         31 Wed           23
-# … with 83 more variables: timeMinute &lt;dbl&gt;, `100_Nevada_Street` &lt;dbl&gt;,
-#   `104_Maple_St.` &lt;dbl&gt;, `106_Winona_St.` &lt;dbl&gt;, Allen_House &lt;dbl&gt;,
+  Timestamp            year month weekOfYear dayOfMonth dayWeek timeHour timeM…¹
+  &lt;dttm&gt;              &lt;dbl&gt; &lt;dbl&gt;      &lt;dbl&gt;      &lt;dbl&gt; &lt;fct&gt;      &lt;dbl&gt;   &lt;dbl&gt;
+1 2016-08-31 23:45:00  2016     8         35         31 Wed           23      45
+2 2016-08-31 23:30:00  2016     8         35         31 Wed           23      30
+# … with 82 more variables: `100_Nevada_Street` &lt;dbl&gt;, `104_Maple_St.` &lt;dbl&gt;,
+#   `106_Winona_St.` &lt;dbl&gt;, Allen_House &lt;dbl&gt;,
 #   `Alumni_Guest_House/Johnson_House` &lt;dbl&gt;, Arboretum_Office &lt;dbl&gt;,
 #   Art_Studios &lt;dbl&gt;, Benton_House &lt;dbl&gt;, Berg_House &lt;dbl&gt;, Bird_House &lt;dbl&gt;,
 #   Boliou_Memorial_Art_Bldg. &lt;dbl&gt;, Burton_Hall &lt;dbl&gt;,
@@ -81,20 +89,20 @@ energy_narrow &lt;- energy %&gt;%
 ```r
 energy_narrow
 # A tibble: 2,880,578 × 10
-   Timestamp            year month weekOfYear dayOfMonth dayWeek timeHour
-   &lt;dttm&gt;              &lt;dbl&gt; &lt;dbl&gt;      &lt;dbl&gt;      &lt;dbl&gt; &lt;fct&gt;      &lt;dbl&gt;
- 1 2015-09-01 00:00:00  2015     9         35          1 Tues           0
- 2 2015-09-01 00:00:00  2015     9         35          1 Tues           0
- 3 2015-09-01 00:00:00  2015     9         35          1 Tues           0
- 4 2015-09-01 00:00:00  2015     9         35          1 Tues           0
- 5 2015-09-01 00:00:00  2015     9         35          1 Tues           0
- 6 2015-09-01 00:00:00  2015     9         35          1 Tues           0
- 7 2015-09-01 00:00:00  2015     9         35          1 Tues           0
- 8 2015-09-01 00:00:00  2015     9         35          1 Tues           0
- 9 2015-09-01 00:00:00  2015     9         35          1 Tues           0
-10 2015-09-01 00:00:00  2015     9         35          1 Tues           0
-# … with 2,880,568 more rows, and 3 more variables: timeMinute &lt;dbl&gt;,
-#   building &lt;chr&gt;, energyKWH &lt;dbl&gt;
+   Timestamp            year month weekOfYear dayOfMonth dayWeek timeH…¹ timeM…²
+   &lt;dttm&gt;              &lt;dbl&gt; &lt;dbl&gt;      &lt;dbl&gt;      &lt;dbl&gt; &lt;fct&gt;     &lt;dbl&gt;   &lt;dbl&gt;
+ 1 2015-09-01 00:00:00  2015     9         35          1 Tues          0       0
+ 2 2015-09-01 00:00:00  2015     9         35          1 Tues          0       0
+ 3 2015-09-01 00:00:00  2015     9         35          1 Tues          0       0
+ 4 2015-09-01 00:00:00  2015     9         35          1 Tues          0       0
+ 5 2015-09-01 00:00:00  2015     9         35          1 Tues          0       0
+ 6 2015-09-01 00:00:00  2015     9         35          1 Tues          0       0
+ 7 2015-09-01 00:00:00  2015     9         35          1 Tues          0       0
+ 8 2015-09-01 00:00:00  2015     9         35          1 Tues          0       0
+ 9 2015-09-01 00:00:00  2015     9         35          1 Tues          0       0
+10 2015-09-01 00:00:00  2015     9         35          1 Tues          0       0
+# … with 2,880,568 more rows, 2 more variables: building &lt;chr&gt;,
+#   energyKWH &lt;dbl&gt;, and abbreviated variable names ¹​timeHour, ²​timeMinute
 ```
 
 ---
@@ -149,15 +157,15 @@ make_datetime(year = 2022,
 first_day &lt;- ymd_hm("2022-01-05 12:30")
 classtime &lt;- now() - first_day
 classtime
-Time difference of 25.22039 days
+Time difference of 248.3928 days
 ```
 
 
 ```r
 as.period(classtime)
-[1] "25d 5H 17M 21.3643372058868S"
+[1] "248d 9H 25M 40.8035001754761S"
 as.duration(classtime)
-[1] "2179041.36433721s (~3.6 weeks)"
+[1] "21461140.8035002s (~35.48 weeks)"
 ```
 ]
 --
@@ -167,14 +175,14 @@ as.duration(classtime)
 ```r
 diff1 &lt;- first_day %--% now()
 diff1/dminutes(1)
-[1] 36317.36
+[1] 357685.7
 ```
 
 
 ```r
 diff2 &lt;- interval(first_day, now())
 diff2/dminutes(1)
-[1] 36317.36
+[1] 357685.7
 ```
 
 ]
@@ -212,21 +220,22 @@ data("flights", package = "nycflights13")
 
 ```
 # A tibble: 336,776 × 19
-    year month   day dep_time sched_dep_time dep_delay arr_time sched_arr_time
-   &lt;int&gt; &lt;int&gt; &lt;int&gt;    &lt;int&gt;          &lt;int&gt;     &lt;dbl&gt;    &lt;int&gt;          &lt;int&gt;
- 1  2013     1     1      517            515         2      830            819
- 2  2013     1     1      533            529         4      850            830
- 3  2013     1     1      542            540         2      923            850
- 4  2013     1     1      544            545        -1     1004           1022
- 5  2013     1     1      554            600        -6      812            837
- 6  2013     1     1      554            558        -4      740            728
- 7  2013     1     1      555            600        -5      913            854
- 8  2013     1     1      557            600        -3      709            723
- 9  2013     1     1      557            600        -3      838            846
-10  2013     1     1      558            600        -2      753            745
-# … with 336,766 more rows, and 11 more variables: arr_delay &lt;dbl&gt;,
-#   carrier &lt;chr&gt;, flight &lt;int&gt;, tailnum &lt;chr&gt;, origin &lt;chr&gt;, dest &lt;chr&gt;,
-#   air_time &lt;dbl&gt;, distance &lt;dbl&gt;, hour &lt;dbl&gt;, minute &lt;dbl&gt;, time_hour &lt;dttm&gt;
+    year month   day dep_time sched_de…¹ dep_d…² arr_t…³ sched…⁴ arr_d…⁵ carrier
+   &lt;int&gt; &lt;int&gt; &lt;int&gt;    &lt;int&gt;      &lt;int&gt;   &lt;dbl&gt;   &lt;int&gt;   &lt;int&gt;   &lt;dbl&gt; &lt;chr&gt;  
+ 1  2013     1     1      517        515       2     830     819      11 UA     
+ 2  2013     1     1      533        529       4     850     830      20 UA     
+ 3  2013     1     1      542        540       2     923     850      33 AA     
+ 4  2013     1     1      544        545      -1    1004    1022     -18 B6     
+ 5  2013     1     1      554        600      -6     812     837     -25 DL     
+ 6  2013     1     1      554        558      -4     740     728      12 UA     
+ 7  2013     1     1      555        600      -5     913     854      19 B6     
+ 8  2013     1     1      557        600      -3     709     723     -14 EV     
+ 9  2013     1     1      557        600      -3     838     846      -8 B6     
+10  2013     1     1      558        600      -2     753     745       8 AA     
+# … with 336,766 more rows, 9 more variables: flight &lt;int&gt;, tailnum &lt;chr&gt;,
+#   origin &lt;chr&gt;, dest &lt;chr&gt;, air_time &lt;dbl&gt;, distance &lt;dbl&gt;, hour &lt;dbl&gt;,
+#   minute &lt;dbl&gt;, time_hour &lt;dttm&gt;, and abbreviated variable names
+#   ¹​sched_dep_time, ²​dep_delay, ³​arr_time, ⁴​sched_arr_time, ⁵​arr_delay
 ```
 ]
 
@@ -435,21 +444,22 @@ top_dest &lt;- flights %&gt;%
 
 ```
 # A tibble: 336,776 × 19
-    year month   day dep_time sched_dep_time dep_delay arr_time sched_arr_time
-   &lt;int&gt; &lt;int&gt; &lt;int&gt;    &lt;int&gt;          &lt;int&gt;     &lt;dbl&gt;    &lt;int&gt;          &lt;int&gt;
- 1  2013     1     1      517            515         2      830            819
- 2  2013     1     1      533            529         4      850            830
- 3  2013     1     1      542            540         2      923            850
- 4  2013     1     1      544            545        -1     1004           1022
- 5  2013     1     1      554            600        -6      812            837
- 6  2013     1     1      554            558        -4      740            728
- 7  2013     1     1      555            600        -5      913            854
- 8  2013     1     1      557            600        -3      709            723
- 9  2013     1     1      557            600        -3      838            846
-10  2013     1     1      558            600        -2      753            745
-# … with 336,766 more rows, and 11 more variables: arr_delay &lt;dbl&gt;,
-#   carrier &lt;chr&gt;, flight &lt;int&gt;, tailnum &lt;chr&gt;, origin &lt;chr&gt;, dest &lt;chr&gt;,
-#   air_time &lt;dbl&gt;, distance &lt;dbl&gt;, hour &lt;dbl&gt;, minute &lt;dbl&gt;, time_hour &lt;dttm&gt;
+    year month   day dep_time sched_de…¹ dep_d…² arr_t…³ sched…⁴ arr_d…⁵ carrier
+   &lt;int&gt; &lt;int&gt; &lt;int&gt;    &lt;int&gt;      &lt;int&gt;   &lt;dbl&gt;   &lt;int&gt;   &lt;int&gt;   &lt;dbl&gt; &lt;chr&gt;  
+ 1  2013     1     1      517        515       2     830     819      11 UA     
+ 2  2013     1     1      533        529       4     850     830      20 UA     
+ 3  2013     1     1      542        540       2     923     850      33 AA     
+ 4  2013     1     1      544        545      -1    1004    1022     -18 B6     
+ 5  2013     1     1      554        600      -6     812     837     -25 DL     
+ 6  2013     1     1      554        558      -4     740     728      12 UA     
+ 7  2013     1     1      555        600      -5     913     854      19 B6     
+ 8  2013     1     1      557        600      -3     709     723     -14 EV     
+ 9  2013     1     1      557        600      -3     838     846      -8 B6     
+10  2013     1     1      558        600      -2     753     745       8 AA     
+# … with 336,766 more rows, 9 more variables: flight &lt;int&gt;, tailnum &lt;chr&gt;,
+#   origin &lt;chr&gt;, dest &lt;chr&gt;, air_time &lt;dbl&gt;, distance &lt;dbl&gt;, hour &lt;dbl&gt;,
+#   minute &lt;dbl&gt;, time_hour &lt;dttm&gt;, and abbreviated variable names
+#   ¹​sched_dep_time, ²​dep_delay, ³​arr_time, ⁴​sched_arr_time, ⁵​arr_delay
 ```
 ]
 
@@ -473,21 +483,22 @@ flights %&gt;%
 
 ```
 # A tibble: 141,145 × 19
-    year month   day dep_time sched_dep_time dep_delay arr_time sched_arr_time
-   &lt;int&gt; &lt;int&gt; &lt;int&gt;    &lt;int&gt;          &lt;int&gt;     &lt;dbl&gt;    &lt;int&gt;          &lt;int&gt;
- 1  2013     1     1      542            540         2      923            850
- 2  2013     1     1      554            600        -6      812            837
- 3  2013     1     1      554            558        -4      740            728
- 4  2013     1     1      555            600        -5      913            854
- 5  2013     1     1      557            600        -3      838            846
- 6  2013     1     1      558            600        -2      753            745
- 7  2013     1     1      558            600        -2      924            917
- 8  2013     1     1      558            600        -2      923            937
- 9  2013     1     1      559            559         0      702            706
-10  2013     1     1      600            600         0      851            858
-# … with 141,135 more rows, and 11 more variables: arr_delay &lt;dbl&gt;,
-#   carrier &lt;chr&gt;, flight &lt;int&gt;, tailnum &lt;chr&gt;, origin &lt;chr&gt;, dest &lt;chr&gt;,
-#   air_time &lt;dbl&gt;, distance &lt;dbl&gt;, hour &lt;dbl&gt;, minute &lt;dbl&gt;, time_hour &lt;dttm&gt;
+    year month   day dep_time sched_de…¹ dep_d…² arr_t…³ sched…⁴ arr_d…⁵ carrier
+   &lt;int&gt; &lt;int&gt; &lt;int&gt;    &lt;int&gt;      &lt;int&gt;   &lt;dbl&gt;   &lt;int&gt;   &lt;int&gt;   &lt;dbl&gt; &lt;chr&gt;  
+ 1  2013     1     1      542        540       2     923     850      33 AA     
+ 2  2013     1     1      554        600      -6     812     837     -25 DL     
+ 3  2013     1     1      554        558      -4     740     728      12 UA     
+ 4  2013     1     1      555        600      -5     913     854      19 B6     
+ 5  2013     1     1      557        600      -3     838     846      -8 B6     
+ 6  2013     1     1      558        600      -2     753     745       8 AA     
+ 7  2013     1     1      558        600      -2     924     917       7 UA     
+ 8  2013     1     1      558        600      -2     923     937     -14 UA     
+ 9  2013     1     1      559        559       0     702     706      -4 B6     
+10  2013     1     1      600        600       0     851     858      -7 B6     
+# … with 141,135 more rows, 9 more variables: flight &lt;int&gt;, tailnum &lt;chr&gt;,
+#   origin &lt;chr&gt;, dest &lt;chr&gt;, air_time &lt;dbl&gt;, distance &lt;dbl&gt;, hour &lt;dbl&gt;,
+#   minute &lt;dbl&gt;, time_hour &lt;dttm&gt;, and abbreviated variable names
+#   ¹​sched_dep_time, ²​dep_delay, ³​arr_time, ⁴​sched_arr_time, ⁵​arr_delay
 ```
 ]
 
@@ -516,22 +527,23 @@ flights %&gt;%
 
 ```
 # A tibble: 141,145 × 20
-    year month   day dep_time sched_dep_time dep_delay arr_time sched_arr_time
-   &lt;int&gt; &lt;int&gt; &lt;int&gt;    &lt;int&gt;          &lt;int&gt;     &lt;dbl&gt;    &lt;int&gt;          &lt;int&gt;
- 1  2013     1     1      542            540         2      923            850
- 2  2013     1     1      554            600        -6      812            837
- 3  2013     1     1      554            558        -4      740            728
- 4  2013     1     1      555            600        -5      913            854
- 5  2013     1     1      557            600        -3      838            846
- 6  2013     1     1      558            600        -2      753            745
- 7  2013     1     1      558            600        -2      924            917
- 8  2013     1     1      558            600        -2      923            937
- 9  2013     1     1      559            559         0      702            706
-10  2013     1     1      600            600         0      851            858
-# … with 141,135 more rows, and 12 more variables: arr_delay &lt;dbl&gt;,
-#   carrier &lt;chr&gt;, flight &lt;int&gt;, tailnum &lt;chr&gt;, origin &lt;chr&gt;, dest &lt;chr&gt;,
-#   air_time &lt;dbl&gt;, distance &lt;dbl&gt;, hour &lt;dbl&gt;, minute &lt;dbl&gt;, time_hour &lt;dttm&gt;,
-#   sch_datetime &lt;dttm&gt;
+    year month   day dep_time sched_de…¹ dep_d…² arr_t…³ sched…⁴ arr_d…⁵ carrier
+   &lt;int&gt; &lt;int&gt; &lt;int&gt;    &lt;int&gt;      &lt;int&gt;   &lt;dbl&gt;   &lt;int&gt;   &lt;int&gt;   &lt;dbl&gt; &lt;chr&gt;  
+ 1  2013     1     1      542        540       2     923     850      33 AA     
+ 2  2013     1     1      554        600      -6     812     837     -25 DL     
+ 3  2013     1     1      554        558      -4     740     728      12 UA     
+ 4  2013     1     1      555        600      -5     913     854      19 B6     
+ 5  2013     1     1      557        600      -3     838     846      -8 B6     
+ 6  2013     1     1      558        600      -2     753     745       8 AA     
+ 7  2013     1     1      558        600      -2     924     917       7 UA     
+ 8  2013     1     1      558        600      -2     923     937     -14 UA     
+ 9  2013     1     1      559        559       0     702     706      -4 B6     
+10  2013     1     1      600        600       0     851     858      -7 B6     
+# … with 141,135 more rows, 10 more variables: flight &lt;int&gt;, tailnum &lt;chr&gt;,
+#   origin &lt;chr&gt;, dest &lt;chr&gt;, air_time &lt;dbl&gt;, distance &lt;dbl&gt;, hour &lt;dbl&gt;,
+#   minute &lt;dbl&gt;, time_hour &lt;dttm&gt;, sch_datetime &lt;dttm&gt;, and abbreviated
+#   variable names ¹​sched_dep_time, ²​dep_delay, ³​arr_time, ⁴​sched_arr_time,
+#   ⁵​arr_delay
 ```
 ]
 
@@ -1268,7 +1280,8 @@ cell_info
 
 - Complete the required tasks using `str_subset`, `str_extract`, `str_split` and `str_replace`.
 
-<div class="countdown" id="timer_61f6cf34" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_e19cd78f" data-update-every="1" tabindex="0" style="right:0;bottom:0;">
+<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">07</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1322,6 +1335,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
