--- a/static/pdf/Day14/Day14.html
+++ b/static/pdf/Day14/Day14.html
@@ -44,7 +44,7 @@ background-size: 160px, 100% 100%
 
 .large[Bastola]
 
- February 09 2022
+ September 10 2022
 
 ---
 
@@ -289,7 +289,7 @@ system.time({
   }
 })
    user  system elapsed 
- 12.432   0.056  12.496 
+ 11.838   0.007  11.849 
 ```
 
 ]
@@ -304,7 +304,7 @@ system.time({
   }
 })
    user  system elapsed 
-   0.01    0.00    0.01 
+  0.009   0.000   0.008 
 ```
 ]
 
@@ -509,7 +509,8 @@ $ sex               &lt;fct&gt; male, female, female, NA, female, male, female, 
 $ year              &lt;int&gt; 2007, 2007, 2007, 2007, 2007, 2007, 2007, 2007, 2007…
 ```
 
-<div class="countdown" id="timer_6203f8d6" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_8508ae08" data-update-every="1" tabindex="0" style="right:0;bottom:0;">
+<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1476,7 +1477,8 @@ Follow the prompts to plot the quantiles of energy consumption for the buildings
 ]
 
 
-<div class="countdown" id="timer_6203f5fa" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_64d1d3b6" data-update-every="1" tabindex="0" style="right:0;bottom:0;">
+<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1531,6 +1533,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
