--- a/public/courses/stat220/week1/index.html
+++ b/public/courses/stat220/week1/index.html
@@ -61,7 +61,8 @@
     
   
   <meta name="description" content="Monday, 09/12 Welcome!
-Day 1 Slides (pdf/html)" />
+Day 1 Slides (pdf/html)
+Before next class Students are expected to open a GitHub account, verify it, and connect RStudio with that account using personal access token (PAT) credential methods." />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat220/week1/" />
@@ -306,7 +307,8 @@ Day 1 Slides (pdf/html)" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/week1/" />
   <meta property="og:title" content="Week 1 | Deepak Bastola" />
   <meta property="og:description" content="Monday, 09/12 Welcome!
-Day 1 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Day 1 Slides (pdf/html)
+Before next class Students are expected to open a GitHub account, verify it, and connect RStudio with that account using personal access token (PAT) credential methods." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -811,6 +813,9 @@ Day 1 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.ne
             <h2 id="monday-0912">Monday, 09/12</h2>
 <p>Welcome!</p>
 <p>Day 1 Slides (<a href="/stat220/Day1.pdf" target="_blank">pdf</a>/<a href="/stat220/Day1.html" target="_blank">html</a>)</p>
+<h3 id="before-next-class">Before next class</h3>
+<p>Students are expected to open a GitHub account, verify it, and connect RStudio with that account using personal access token (PAT) credential methods. Once this step is finished, students should clone a git repository on their local machines using git version control methods (<a href="https://deepbas.io/courses/stat220/github-in-stat-220/#creating-an-individual-assignment-repo-and-project" target="_blank" rel="noopener">tutorial</a>), modify the files, save, commit, and push the changes to the remote repository associated with their GitHub username. Here is one useful video about Git and Github, <a href="https://www.youtube.com/watch?v=BCQHnlnPusY" target="_blank" rel="noopener">Introduction to Git and Github</a>.</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/BCQHnlnPusY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
           </div>
 
