--- a/public/courses/stat220/week1/index.html
+++ b/public/courses/stat220/week1/index.html
@@ -816,6 +816,20 @@ Before next class Students are expected to open a GitHub account, verify it, and
 <h3 id="before-next-class">Before next class</h3>
 <p>Students are expected to open a GitHub account, verify it, and connect RStudio with that account using personal access token (PAT) credential methods. Once this step is finished, students should clone a git repository on their local machines using git version control methods (<a href="https://deepbas.io/courses/stat220/github-in-stat-220/#creating-an-individual-assignment-repo-and-project" target="_blank" rel="noopener">tutorial</a>), modify the files, save, commit, and push the changes to the remote repository associated with their GitHub username. Here is one useful video about Git and Github, <a href="https://www.youtube.com/watch?v=BCQHnlnPusY" target="_blank" rel="noopener">Introduction to Git and Github</a>.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/BCQHnlnPusY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<p>Also, please read through all the course set-up modules and test your R skills by doing the test-assignment named hw0-username accessible here shortly, <a href="https://github.com/DataScienceFall22/" target="_blank" rel="noopener">Stat 220 Organization GitHub page</a>.If you can successfully push your modifications, then you should be set up for this course, technically. Please try to achieve this by Friday. We will also do a live demo in class on Wednesday.</p>
+<h2 id="wednesday-0914">Wednesday, 09/14</h2>
+<h3 id="before-class">Before Class</h3>
+<div class="alert alert-note">
+  <div>
+    Please read <a href="https://r4ds.had.co.nz/r-markdown.html#r-markdown">GW RMarkdown</a>, <a href="https://r4ds.had.co.nz/introduction.html">GW Chapter 1</a> and <a href="https://r4ds.had.co.nz/vectors.html">GW Chapter 20</a> to prepare for the class.
+  </div>
+</div>
+<h3 id="in-class">In Class</h3>
+<ul>
+<li>R-markdown and Reproducible workflows</li>
+<li>Getting up and running with R markdown</li>
+<li>Basic R-codes and Github practice</li>
+</ul>
 
           </div>
 
