--- a/public/courses/stat220/week1/index.html
+++ b/public/courses/stat220/week1/index.html
@@ -60,7 +60,8 @@
   
     
   
-  <meta name="description" content="Monday, 09/12 Welcome!
+  <meta name="description" content="Monday, 09/12
+Welcome!
 Day 1 Slides (pdf/html)
 Before next class Students are expected to open a GitHub account, verify it, and connect RStudio with that account using personal access token (PAT) credential methods." />
 
@@ -306,7 +307,8 @@ Before next class Students are expected to open a GitHub account, verify it, and
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/week1/" />
   <meta property="og:title" content="Week 1 | Deepak Bastola" />
-  <meta property="og:description" content="Monday, 09/12 Welcome!
+  <meta property="og:description" content="Monday, 09/12
+Welcome!
 Day 1 Slides (pdf/html)
 Before next class Students are expected to open a GitHub account, verify it, and connect RStudio with that account using personal access token (PAT) credential methods." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
@@ -810,14 +812,14 @@ Before next class Students are expected to open a GitHub account, verify it, and
           <h1>Week 1</h1>
 
           <div class="article-style">
-            <h2 id="monday-0912">Monday, 09/12</h2>
+            <p><span style="color:orange"><strong>Monday, 09/12</strong></span></p>
 <p>Welcome!</p>
 <p>Day 1 Slides (<a href="/stat220/Day1.pdf" target="_blank">pdf</a>/<a href="/stat220/Day1.html" target="_blank">html</a>)</p>
 <h3 id="before-next-class">Before next class</h3>
 <p>Students are expected to open a GitHub account, verify it, and connect RStudio with that account using personal access token (PAT) credential methods. Once this step is finished, students should clone a git repository on their local machines using git version control methods (<a href="https://deepbas.io/courses/stat220/github-in-stat-220/#creating-an-individual-assignment-repo-and-project" target="_blank" rel="noopener">tutorial</a>), modify the files, save, commit, and push the changes to the remote repository associated with their GitHub username. Here is one useful video about Git and Github, <a href="https://www.youtube.com/watch?v=BCQHnlnPusY" target="_blank" rel="noopener">Introduction to Git and Github</a>.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/BCQHnlnPusY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p>Also, please read through all the course set-up modules and test your R skills by doing the test-assignment named hw0-username accessible here shortly, <a href="https://github.com/DataScienceFall22/" target="_blank" rel="noopener">Stat 220 Organization GitHub page</a>. It will be useful to go over <a href="https://deepbas.io/courses/stat220/github-in-stat-220/#individual-assignments" target="_blank" rel="noopener">how to connect Github and Rstudio</a> again. If you can successfully push your modifications, then you should be set up for this course, technically. Please try to achieve this by Friday. We will also do a live demo in class on Wednesday.</p>
-<h2 id="wednesday-0914">Wednesday, 09/14</h2>
+<p>Also, please read through all the course set-up modules and test your R skills by doing the test-assignment named hw0-username accessible here, <a href="https://github.com/DataScienceFall22/" target="_blank" rel="noopener">Stat 220 Organization GitHub page</a>. It will be useful to go over <a href="https://deepbas.io/courses/stat220/github-in-stat-220/#individual-assignments" target="_blank" rel="noopener">how to connect Github and Rstudio</a> again. If you can successfully push your modifications, then you should be set up for this course, technically. Please try to achieve this by Friday. We will also do a live demo in class on Wednesday.</p>
+<p><span style="color:orange"><strong>Wednesday, 09/14</strong></span></p>
 <h3 id="before-class">Before Class</h3>
 <div class="alert alert-note">
   <div>
@@ -831,8 +833,16 @@ Before next class Students are expected to open a GitHub account, verify it, and
 <li>Basic R-codes and Github practice</li>
 </ul>
 <p>Day 2 Slides (<a href="/stat220/Day2.pdf" target="_blank">pdf</a>/<a href="/stat220/Day2.html" target="_blank">html</a>)</p>
-<p>Optional (if you need more review):</p>
+<p><em>Optional</em> (if you need more review):</p>
 <p>If it has been a LONG time since you took STAT 120 or used R, then this crash course is helpful: <a href="https://rstudio.cloud/learn/primers/1.2" target="_blank" rel="noopener">programming basics primer from RStudio</a>. These resources are also useful if you feel like you are starting from scratch: <a href="https://ismayc.github.io/rbasics-book/3-rstudiobasics.html" target="_blank" rel="noopener">R and RStudio Basics</a> and <a href="https://ismayc.github.io/rbasics-book/4-rmarkdown.html" target="_blank" rel="noopener">R Markdown</a></p>
+<p><span style="color:orange"><strong>Friday, 09/16</strong></span></p>
+<h3 id="before-class-1">Before Class</h3>
+<div class="alert alert-note">
+  <div>
+    TBD
+  </div>
+</div>
+<p>Please start to work on HW1 that will be due at 10 PM on Monday, 09/19. You are required to submit the HW via GitHub (i.e., push your submission to the GitHub repo named &lsquo;hw1-username&rsquo; under the class GitHub organization, <a href="https://github.com/orgs/stat220/" target="_blank" rel="noopener">Stat220</a>). Please do not forget to knit your final .Rmd file to .pdf before pushing.</p>
 
           </div>
 
